--- a/www/builder/sources/views/Main/Main.template
+++ b/www/builder/sources/views/Main/Main.template
@@ -9,6 +9,7 @@
 					<component UserInfo>
 					<div class="mainpage-leftcolumn-title bold">
 						{@calendar}
+						<component Tooltip args="{#calendarTooltip}">
 					</div>
 					<component Calendar>
 				</div>
