ClickHandler, FavoritesCalendar, builder

--- a/www/builder/config.json
+++ b/www/builder/config.json
@@ -22,6 +22,7 @@
 				"view": "Main",
 				"accessLevel": 10,
 				"title": "Home",
+				"load": ["Favorites"],
 				"params": {
 					"text": "blablabla",
 					"name": "$2"
