--- a/www/builder/sources/dialogs/CalendarFavorites/CalendarFavorites.template
+++ b/www/builder/sources/dialogs/CalendarFavorites/CalendarFavorites.template
@@ -1,3 +1,5 @@
 {template .content}
-	111111111111111
+	{foreach $tenders as &index => &tender}
+		<component DataTableStandartRow args="{&tender}">
+	{/foreach}
 {/template}
