--- a/www/builder/sources/ui/Calendar/Calendar.template
+++ b/www/builder/sources/ui/Calendar/Calendar.template
@@ -1,4 +1,5 @@
 <div class="app-calendar">
+	{&args.aaa}
 	<div class="app-calendar-header">
 		<div class="app-calendar-prev" onClick="onPrevClick"></div>
 		<div class="app-calendar-month">
