--- a/www/builder/sources/components/DataTable/Rows/DataTableRow.template
+++ b/www/builder/sources/components/DataTable/Rows/DataTableRow.template
@@ -14,11 +14,11 @@
 {/template}
 
 {template .hotMark}
-	<div data-title="Горячий тендер - у данной закупки заканчивается период подачи заявок на участие." class="tooltiped datatable-tooltiped datatable-hot-tender" data-timeout="true"></div>
+	<div data-title="fuck" class="tooltiped datatable-tooltiped datatable-hot-tender" data-timeout="true"></div>
 {/template}
 
 {template .count}
 	<span class="app-datatable-standart-row-count">
-		{&args['count']}
+		{~count}
 	</span>
 {/template}
