--- a/www/builder/sources/ui/Dialog/Dialog.template
+++ b/www/builder/sources/ui/Dialog/Dialog.template
@@ -1,10 +1,10 @@
 {template .main}
 	<div class="app-dialog-mask{$shown?' shown':''}" onClick="hide"></div>
 	<div class="app-dialog{$expanded?' expanded':''}{$shown?' shown':''}" scope="1" style="width:{$width}px;margin-left:{$marginLeft};margin-top:{$marginTop};">
-		{if &args.closable}
+		{if ~closable}
 			<div class="app-dialog-close" onClick="hide"></div>
 		{/if}
-		{if &args.expandable}
+		{if ~expandable}
 			<div class="app-dialog-expand" onClick="expand"></div>
 		{/if}
 		<div class="app-dialog-title">
