--- a/www/builder/sources/ui/PopupMenu/PopupMenu.template
+++ b/www/builder/sources/ui/PopupMenu/PopupMenu.template
@@ -1,6 +1,6 @@
 {template .main}
-	<div class="app-popup-menu-outer-container {&args.className}" scope="1">
-		<div class="app-popup-menu-inner-container" onClick="onClick" style="{&args.maxHeight?'max-height:'+&args.maxHeight+'px;' : ''}">
+	<div class="app-popup-menu-outer-container {~className}" scope="1">
+		<div class="app-popup-menu-inner-container" onClick="onClick" style="{~maxHeight?'max-height:'+~maxHeight+'px;' : ''}">
 			{foreach $buttons as &idx => &button}
 				<div class="app-popup-menu-button" data-value="{&button.value}" data-index="{&idx}">
 					{&button.name}
