--- a/www/builder/sources/components/DataTable/Rows/DataTableStandartRow/DataTableStandartRow.template
+++ b/www/builder/sources/components/DataTable/Rows/DataTableStandartRow/DataTableStandartRow.template
@@ -1,20 +1,31 @@
 {template .main}
-	<a href="#tender/{~Id}" target="_blank" class="app-datatable-standart-row" scope="1" data-id="{~Id}">
-		<template colorMark>
-		<template controls>
+	<a href="#tender/{~Id}" target="_blank" class="app-datatable-row" scope="1" data-id="{~Id}">		
+		<template controls if="{!~nocontrols}">		
 		<div class="app-datatable-standart-row-top">
-			<div class="app-datatable-standart-row-fz">
+			<div class="app-datatable-standart-row-top-item">
 				{getFzName(~type)}
 			</div>
-			<div class="app-datatable-standart-row-region">
-				<template count if="{~multiregion}" count="{~multiregion}">
-				{~regionName}
-			</div>
-			<div class="app-datatable-standart-row-region">
-				<template count if="{~multicategory}" count="{~multicategory}">
-				{~subcategory}
-			</div>
-			<div class="app-datatable-standart-row-type">
+			{if ~multiregion}
+				<div class="app-datatable-standart-row-top-item tooltiped" txt="{~regionnames}" cap="{@regions}" del="1" cor="list">
+					<template count count="{~multiregion}">
+					{~regionName}
+				</div>
+			{else}
+				<div class="app-datatable-standart-row-top-item">
+					{~regionName}
+				</div>
+			{/if}
+			{if ~multicategory}
+				<div class="app-datatable-standart-row-top-item tooltiped" txt="{~subcategories}" cap="{@categories}" del="1" cor="list">
+					<template count count="{~multicategory}">
+					{~subcategory}
+				</div>
+			{else}
+				<div class="app-datatable-standart-row-top-item">
+					{~subcategory}
+				</div>
+			{/if}
+			<div class="app-datatable-standart-row-top-item">
 				<include unavailable if="{~razm == 'N/A'}" else="{~razm}" tariff="{~isUnavailable}" width="66px">
 			</div>
 
