--- a/www/builder/sources/components/SearchForm/SearchFormFilterMenu/SearchFormFilterMenu.template
+++ b/www/builder/sources/components/SearchForm/SearchFormFilterMenu/SearchFormFilterMenu.template
@@ -1,3 +1,3 @@
 {template .content}
-	<div class="app-ui-checkbox{~item.isAutoOpen?' checked':''}" data-value="{~item.value}"></div>
+	<div class="app-ui-checkbox{~item['isAutoOpen']?' checked'}" data-value="{~item['value']}"></div>
 {/template}
