--- a/www/builder/sources/dialogs/CalendarFavorites/CalendarFavorites.template
+++ b/www/builder/sources/dialogs/CalendarFavorites/CalendarFavorites.template
@@ -1,5 +1,8 @@
 {template .content}
-	{foreach $tenders as &index => &tender}
-		<component DataTableStandartRow args="{&tender}">
-	{/foreach}
+	<div class="simple-datatable calendar-favorites-datatable">
+		{foreach $tenders as &tender}
+			{let &tender['nocontrols'] = 1}
+			<component DataTableStandartRow args="{&tender}">
+		{/foreach}
+	</div>
 {/template}
