--- a/www/builder/sources/ui/Dialog/Dialog.template
+++ b/www/builder/sources/ui/Dialog/Dialog.template
@@ -1,6 +1,6 @@
 {template .main}
-	<div class="app-dialog-mask{$shown?' shown':''}" onClick="hide"></div>
-	<div class="app-dialog{$expanded?' expanded':''}{$shown?' shown':''}" scope="1" style="width:{$width}px;margin-left:{$marginLeft};margin-top:{$marginTop};">
+	<div class="app-dialog-mask{$shown?' shown'}" onClick="hide"></div>
+	<div class="app-dialog{$expanded?' expanded'}{$shown?' shown'}" scope="1" style="width:{$width}px;margin-left:{$marginLeft};margin-top:{$marginTop};">
 		{if ~closable}
 			<div class="app-dialog-close" onClick="hide"></div>
 		{/if}
@@ -10,7 +10,7 @@
 		<div class="app-dialog-title">
 			{$title}
 		</div>
-		<div class="app-dialog-content" style="{$height?'max-height:'+$height+'px;':''}">
+		<div class="app-dialog-content" style="{$height?'max-height:'+$height+'px;'}">
 			<template content>
 		</div>
 	</div>
