--- a/www/builder/sources/ui/PopupMenu/PopupMenu.template
+++ b/www/builder/sources/ui/PopupMenu/PopupMenu.template
@@ -1,9 +1,9 @@
 {template .main}
 	<div class="app-popup-menu-outer-container {~className}" scope="1">
-		<div class="app-popup-menu-inner-container" onClick="onClick" style="{~maxHeight?'max-height:'+~maxHeight+'px;' : ''}">
+		<div class="app-popup-menu-inner-container" onClick="onClick" style="{~maxHeight?'max-height:'+~maxHeight+'px;'}">
 			{foreach $buttons as &idx => &button}
-				<div class="app-popup-menu-button" data-value="{&button.value}" data-index="{&idx}">
-					{&button.name}
+				<div class="app-popup-menu-button" data-value="{&button['value']}" data-index="{&idx}">
+					{&button['name']}
 					<template content item="{&button}">
 				</div>
 			{/foreach}
