let operator validation

--- a/www/builder/sources/components/SearchForm/SearchForm.template
+++ b/www/builder/sources/components/SearchForm/SearchForm.template
@@ -1,3 +1,4 @@
+{let &_}
 <div class="app-search-form" scope="1">
 	<div class="app-search-form-title">{~title}</div>
 	<div class="app-search-form-close-side" onClick="toggleExpand"></div>
