--- a/www/builder/sources/views/Main/Main.template
+++ b/www/builder/sources/views/Main/Main.template
@@ -15,7 +15,7 @@
 				</div>
 			</td>
 			<td class="app-mainpage-content-column">
-
+				<component TabPanel args="{#mainPageTabs}">
 			</td>
 		</tr>
 	</table>
