--- a/www/builder/sources/views/Main/Main.template
+++ b/www/builder/sources/views/Main/Main.template
@@ -16,6 +16,17 @@
 			</td>
 			<td class="app-mainpage-content-column">
 				<component TabPanel args="{#mainPageTabs}">
+				<div class="app-mainpage-content">
+					<div class="app-mainpage-tab1-content">
+
+					</div>
+					<div class="app-mainpage-tab2-content">
+
+					</div>
+					<div class="app-mainpage-tab3-content">
+
+					</div>
+				</div>
 			</td>
 		</tr>
 	</table>
