children waiting for components

--- a/www/builder/sources/components/SearchForm/forms/TenderSearchForm/TenderSearchForm.template
+++ b/www/builder/sources/components/SearchForm/forms/TenderSearchForm/TenderSearchForm.template
@@ -1,3 +1,5 @@
+<component KeywordsPanel cmpid="keywordsPanel">
+
 <div class="app-search-form-reset">
 	<div class="hover-label" onClick="onResetButtonClick">
 		{@clearFilter}
@@ -8,4 +10,7 @@
 </div>
 <div class="app-tender-search-form" scope="1">
 	<component SearchFormFilters>
+	<div class="app-tender-search-form-content">
+		<component KeywordsButton panel="{^keywordsPanel}">
+	</div>
 </div>
