--- a/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
+++ b/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
@@ -1,3 +1,6 @@
 <div class="app-keywords-options">
 	<component Select cmpid="nonmorph" options="{#keywordsNonMorphOptions}" class="frameless">
+	<div onClick="aaa">
+	11111111<br>222222222
+	</div>
 </div>
