--- a/www/builder/sources/controls/Select/Select.template
+++ b/www/builder/sources/controls/Select/Select.template
@@ -1,18 +1,11 @@
-<div class="app-input-container {$class}" scope="1">
-	{if $caption}
-		<div class="app-input-caption">
-			{$caption}
-		</div>
-	{/if}
-	<div class="app-select{$active?' active'}">
-		<div class="app-select-value" onClick="onClick">
-			{$title}
-		</div>
-		<div class="app-select-options" onClick="onOptionsClick">
-			{foreach $options as &option}
-				<div class="app-select-option" data-value="{&option.value}">{&option.title}</div>
-			{/foreach}
-		</div>
+<div class="app-select{$class?' '+$class}{$active?' active'}" scope="1">
+	<div class="app-select-value" onClick="onClick">
+		{$title}
+	</div>
+	<div class="app-select-options" onClick="onOptionsClick">
+		{foreach $options as &option}
+			<div class="app-select-option" data-value="{&option.value}">{&option.title}</div>
+		{/foreach}
 	</div>
 	<input type="hidden" name="{$name}" value="{$value}"/>
 </div>
