--- a/www/builder/sources/components/SearchForm/SearchForm.template
+++ b/www/builder/sources/components/SearchForm/SearchForm.template
@@ -2,5 +2,5 @@
 	<div class="app-search-form-title">{~title}</div>
 	<div class="app-search-form-close-side" onClick="toggleExpand"></div>
 	<div class="app-search-form-close" onClick="toggleExpand"></div>
-	<component TenderSearchForm>
+	<component class="TenderSearchForm">
 </div>
