--- a/www/builder/sources/dialogs/OrderCall/OrderCall.template
+++ b/www/builder/sources/dialogs/OrderCall/OrderCall.template
@@ -1,5 +1,5 @@
 {template .content}
-	<component OrderCallForm>
+	<form class="OrderCallForm">
 	<div class="standart-button order-support" onClick="onSupportButtonClick">
 		{@toSupport}
 	</div>
