--- a/www/builder/sources/components/FilterStatistics/FilterStatistics.template
+++ b/www/builder/sources/components/FilterStatistics/FilterStatistics.template
@@ -21,12 +21,12 @@
 		{foreach $filters as &filter}
 			<div class="app-filter-stat-row row{&filter['filterId']}">
 				<span class="app-filter-stat-row-name">{&filter['header']}</span>
-				<span>+{:today=0}</span>
-				<span>+{:yesterday=0}</span>
-				<span>{:current=0}</span>
+				<span>+{::today=0}</span>
+				<span>+{::yesterday=0}</span>
+				<span>{::current=0}</span>
 				{if ~extended}
-					<span>{:week=0}</span>
-					<span>{:month=0}</span>
+					<span>{::week=0}</span>
+					<span>{::month=0}</span>
 				{/if}
 			</div>
 		{/foreach}
