--- a/www/builder/sources/components/SearchForm/menues/SearchFormFilters/SearchFormFilters.template
+++ b/www/builder/sources/components/SearchForm/menues/SearchFormFilters/SearchFormFilters.template
@@ -1,18 +1,26 @@
 <div class="app-search-form-filters" scope="1">
 	<div class="app-search-form-filters-create-button">
-		<span>{@createFilter}</span>
-		<component SearchFormCreateFilterMenu>
+		<span>
+			{@createFilter}
+		</span>
+		<component class="SearchFormCreateFilterMenu">
 	</div>
 	<div class="app-search-form-filters-button{!$quantity?' with-plus'}">
-		<div class="app-search-form-filters-button-inner">{@myFilters}</div>
+		<div class="app-search-form-filters-button-inner">
+			{@myFilters}
+		</div>
 		<div class="app-search-form-filters-button-side">
-			<label class="app-search-form-filters-button-quantity">{$quantity}</label>
+			<label class="app-search-form-filters-button-quantity">
+				{$quantity}
+			</label>
 			<div class="app-search-form-filters-button-plus"></div>
 		</div>
-		<component SearchFormFilterMenu>
+		<component class="SearchFormFilterMenu">
 	</div>
 	<div class="app-search-form-filter-name" onClick="onSaveFilterClick">
 		{$filterName}
 	</div>
-	<div class="app-search-form-filter-save-button" onClick="onSaveFilterClick">{@saveFilter}</div>
+	<div class="app-search-form-filter-save-button" onClick="onSaveFilterClick">
+		{@saveFilter}
+	</div>
 </div>
