--- a/www/builder/sources/components/DataTable/Rows/DataTableStandartRow/DataTableStandartRow.template
+++ b/www/builder/sources/components/DataTable/Rows/DataTableStandartRow/DataTableStandartRow.template
@@ -44,7 +44,7 @@
 		
 		</div>
 		{if ~fragments}
-			<component DataTableFragmets data="{~fragments}">
+			<component class="DataTableFragmets" data="{~fragments}">
 		{/if}
 	</a>
 {/template}
