--- a/www/builder/sources/forms/AuthForm/AuthForm.template
+++ b/www/builder/sources/forms/AuthForm/AuthForm.template
@@ -1,3 +1,3 @@
-<div class="app-authform-logo">LOGO</div>
-<include FormControls controls="{~controls}">
-<include FormSubmit submit="{~submit}">
+{template .content}
+	<div class="app-authform-logo">LOGO</div>
+{/template}
