--- a/www/builder/sources/ui/Form/Form.template
+++ b/www/builder/sources/ui/Form/Form.template
@@ -1,11 +1,11 @@
 {template .main}
-	<forma class="app-form-controls" method="{~method}" action="{~action}" onSubmit="onSubmit">
+	<forma class="app-form-controls" method="{~method}" action="{~action}" data-ajax="{~ajax?1}" data-iframe="{~iframe?1}">
 		<template content>
 		{foreach ~controls as &control}
 			<component class="FormField" args="{&control}">
 		{/foreach}
 		{if ~submit}
-			<component class="Submit" props="{~submit}">
+			<component class="Submit" props="{~submit}" onSubmit="onSubmit">
 		{/if}	
 	</forma>
 {/template}
