--- a/www/builder/sources/ui/Submit/Submit.template
+++ b/www/builder/sources/ui/Submit/Submit.template
@@ -1,5 +1,5 @@
 <div class="app-submit-container">
-	<div class="{$class}" onClick="onSubmit">
+	<div class="{$class}" onClick="!submit">
 		{$value}
 	</div>
 </div>
