--- a/www/builder/sources/ui/FormField/FormField.template
+++ b/www/builder/sources/ui/FormField/FormField.template
@@ -1,4 +1,4 @@
-<div class="app-input-container {~class}" scope="1">
+<div class="app-input-container{~class?' '+~class}" scope="1">
 	{if ~caption}
 		<div class="app-input-caption">
 			{~caption}
