--- a/www/builder/sources/menues/TopMenu/TopMenu.template
+++ b/www/builder/sources/menues/TopMenu/TopMenu.template
@@ -1,4 +1,4 @@
-<div class="app-top-menu" scope="true">
+<div class="app-top-menu" scope>
 	<div class="app-top-menu-inner">
 		<a href="#main" class="app-top-menu-logo"></a>
 		<a href="#main" role="main">Главная</a>
