--- a/www/builder/sources/views/Main/Main.template
+++ b/www/builder/sources/views/Main/Main.template
@@ -1,4 +1,4 @@
-<div class="view-content main-view-content" scope="1">
+<div class="view-content main-view-content" scope>
 	<table class="app-mainpage-table" cellpadding="0px" cellspacing="0px">
 		<tr>
 			<td class="app-mainpage-left-column">
