--- a/www/builder/sources/views/Main/UserInfo/UserInfo.template
+++ b/www/builder/sources/views/Main/UserInfo/UserInfo.template
@@ -1,4 +1,4 @@
-<table class="app-mainpage-user-info" cellpadding="0px" cellspacing="0px" scope="1">
+<table class="app-mainpage-user-info" cellpadding="0px" cellspacing="0px" scope>
 	<tr>
 		<td>{@client}:</td>
 		<td>{$userName}</td>
