--- a/www/builder/sources/views/Search/Search.template
+++ b/www/builder/sources/views/Search/Search.template
@@ -1,4 +1,4 @@
-<div class="view-content{$expanded?' form-expanded'}" scope="true">
+<div class="view-content{$expanded?' form-expanded'}" scope>
 	<component class="SearchForm" cmpid="form" onExpand="onFormExpand">
 	<component class="TendersDataTable" cmpid="datatable">
 </div>
