--- a/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
+++ b/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
@@ -1,3 +1,5 @@
 <div class="app-keywords-options">
+	<span class="bold">{@tofind}</span>
 	<control class="Select" name="nonmorph" options="{#keywordsNonMorphOptions}" className="frameless">
+	<span class="bold">{@in}</span>
 </div>
