--- a/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
+++ b/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
@@ -1,5 +1,13 @@
 <div class="app-keywords-options">
 	<span class="bold">{@tofind}</span>
-	<control class="Select" name="nonmorph" options="{#keywordsNonMorphOptions}" className="frameless">
+	<control class="Select" name="nonmorph" options="{#keywordsNonMorphOptions}" arg-className="frameless" arg-tooltip="true">
 	<span class="bold">{@in}</span>
+	<control class="Checkbox" name="searchInDocumentation" args="{#docCheckboxOptions}">
+	<control class="Checkbox" name="registryContracts" args="{#contCheckboxOptions}">
+	<control class="Checkbox" name="registryProducts" args="{#prodCheckboxOptions}">
+	<div class="app-keywords-add-request">
+		<span>{@addRequest}</span>
+		<include tooltip className="question-tooltip" key="keywordsNewReq">
+	</div>
+	<div class="app-tooltip keywords-hint"></div>
 </div>
